# mikisayaka

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  rustfmt.toml
.github/workflows/: docker-image.yml
.kamal/: secrets
.sqlx/: query-04f2784c8bbf8cfafda3599c08778c3749c8fc75f40490b170a38731c9d94729.json  query-05ec359025dd75a8f7b6df7fc126258ecba5465e94e42628d13fd87bc921b675.json  query-0edeba249fec83802e33b10fe7283ef899e322cbce8420b9f2fc2b9b453f3d5f.json  query-38942c2ce13dd2fb843d0cf1e9c9a7bf5a27569829674c96692ac560053c4b0c.json  query-3b75cafd9a39a79544c25709245dc47f1fdcf5326d1881adb25a4f5e2c951dec.json  query-3d0131e6125fcafc34392b7f58e0c5ce8532235835c9512b1b4bdad2cae4eb24.json  query-5576043c7a1e7b70ec7e8aca82a0ae480693534f9054ed367b56a69afe6ee080.json  query-5e1cdb9c9aff852b2e940287edf1ce285ded88aad294578ca009fbfb72929e25.json  query-6782dee79f84681524f0c67261f635323e72b578cd826c3f2985c91b3dc9e04a.json  query-67b70f7f8f55d1db1cde99157949a429bbc00e0bee20523320fa10c5fea37424.json  query-69c2f6d2491bbaa652233cea2d936d5f2e2f98dccb332cbec6980554c0176675.json  query-6ca85468b541fb26b0b1c7b9fccdb75d79028a0be5f44500858d791edbf7ad6e.json  query-742cf99d49113d676cb892181e72d33d248f644baa136cb1295ee4cbd21bcee1.json  query-81f79b1975430e4592790e83e3f8bb4e42b9de22a04baccc0479846a32bc79e2.json  query-8cf880111239b8519758d7f6c7cf7c80bd1990bd23a0b057c5e940019932df77.json  query-931d2c967e202ef7d509ba586a840237810d0e7ad765276e9ff737d2c7cc1121.json  query-9d7a1b6e7a341d7755103d51ed5e4af717a9ac678f4fb3add8e57f43f0bebe9f.json  query-a08a95eebbc25847637a33cb577d8c287599fe62f0353166fe54677faf9a6be6.json  query-bf2afbbe01c604c10f396a7e7d8107eb1629d1649ac65e1007b287fd806df3a5.json  query-c9b47fc24c3fa73e6ffd47e238dd09fe6fd62a20bc03c36648fa3bba00f28aef.json  query-ccc6536ac2e469b0e71d5f59cb6c60d362406d4c4f115d44921239b2b9ebc9dd.json  query-f0e0ca51b68d3b1114d43d3c20cec616347f2ce54ec88f638d038758e8f2cbb7.json  query-f8f8a04c961b9d5fd6a7edb7b254462649685f45cbb2c95e3376da2381d036a7.json  query-fb473d8fe347a78d2bc401ff25201c8b3cdd4a0857080591a07b7f21e335f4be.json  query-fd755b387020f3033fb57dc3851bc12a44192884279bec4e7f9f2253114d8323.json
config/: deploy.yml
migrations/: 20250320084631_initial_migration.down.sql  20250320084631_initial_migration.up.sql  20250320101930_subscriptions.down.sql  20250320101930_subscriptions.up.sql  20250410084457_gas_prices.down.sql  20250410084457_gas_prices.up.sql  20250718083948_add_quotes.down.sql  20250718083948_add_quotes.up.sql  20250721091514_add_zzz_checkin.down.sql  20250721091514_add_zzz_checkin.up.sql
src/: chapter_tracker.rs  commands.rs  constants.rs  gas_prices.rs  handlers.rs  init.rs  main.rs  migrator.rs  models.rs  telemetry.rs  zenless.rs
src/commands/: fluff.rs  gas_prices.rs  help.rs  manga.rs  mod.rs  quote.rs  role.rs  status.rs  zenless.rs
src/constants/: embeds.rs  gas_prices.rs  manga.rs  mod.rs  music.rs  version.rs  zenless.rs
src/migrator/: m_20240810_000001_initial_setup.rs  m_20241009_000002_mangadex.rs  m_20241014_000003_manga_last_updated.rs  mod.rs
src/models/: gas_prices.rs  manga.rs  mod.rs  prelude.rs  quotes.rs  roles.rs  songlink.rs  zenless.rs
src/models/zenless/: daily.rs  geetest.rs
