[package]
name = "mikisayaka"
version = "2025.4.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
dotenvy = "0.15.7"
fancy-regex = "0.14.0"
futures = "0.3.31"
mangadex-api = { version = "3.4.1", features = [
    "multi-thread",
    "tokio-multi-thread",
] }
mangadex-api-schema-rust = "0.10.0"
mangadex-api-types-rust = "0.10.0"
poise = { version = "0.6.1", features = ["cache"] }
rand = "0.8.5"
reqwest = "0.12.12"
rustc_version_runtime = "0.3.0"
semver = "1.0.23"
serde = { version = "1.0.218", features = ["serde_derive"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "macros",
    "sqlite",
    "migrate",
    "uuid",
    "time",
] }
thousands = "0.2.0"
time = { version = "0.3.36", features = ["formatting", "serde"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = [
    "tokio",
    "grpc-tonic",
    "trace",
    "metrics",
    "logs"
] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
urlencoding = "2.1.3"
uuid = "1.10.0"
opentelemetry-appender-tracing = "0.30.1"

[build-dependencies]
anyhow = "1.0.86"
vergen-gitcl = "1.0.0"
