[package]
name = "mikisayaka"
version = "2025.8.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
dotenvy = "0.15.7"
fancy-regex = "0.14.0"
futures = "0.3.31"
mangadex-api = { git = "https://github.com/j1nxie/mangadex-api" }
mangadex-api-schema-rust = { git = "https://github.com/j1nxie/mangadex-api" }
mangadex-api-types-rust = { git = "https://github.com/j1nxie/mangadex-api" }
poise = { version = "0.6.1", features = ["cache"] }
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "rustls-tls-webpki-roots",
    "charset",
    "system-proxy",
] }
rustc_version_runtime = "0.3.0"
semver = "1.0.23"
serde = { version = "1.0.218", features = ["serde_derive"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "macros",
    "sqlite",
    "migrate",
    "uuid",
    "time",
] }
thousands = "0.2.0"
time = { version = "0.3.36", features = [
    "formatting",
    "serde",
    "local-offset",
    "macros",
] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = [
    "tokio",
    "grpc-tonic",
    "trace",
    "metrics",
    "logs",
    "reqwest-rustls-webpki-roots",
] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
urlencoding = "2.1.3"
uuid = "1.10.0"
opentelemetry-appender-tracing = "0.30.1"
serde_json = "1.0.141"
serde_repr = "0.1.20"

[build-dependencies]
anyhow = "1.0.86"
vergen-gitcl = "1.0.0"
